2011-02-02 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-9
        * IB/qib: Avoid filtering lid on SMA portinfo
2011-12-12 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-8
        * IB/qib: fix drop counter for ud packets
2011-12-02 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-7
        * IB/qib: Correct nfreectxts for multiple HCAs
2011-11-02 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-6
	* IB/qib: Fix panic in RC error flushing logic
2011-10-14 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-5
	* IB/qib: handle kernels that export __get_user_pages()
2011-08-09 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-4
        * IB/qib: Correct byte swap issue in PMA packet processing
        * IB/qib: defer hca error events to tasklet
        * IB/qib: Optimize RC/UC code by IB operation
        * IB/qib: decode path mtu optimization
        * IB/qib: Eliminate divide/mod in converting idx to egr buf pointer
        * IB/qib: qpn lookup optimizations
        * IB/qib: precompute timeout jiffies to optimize latency
        * IB/qib: memcpy optimizations
        * IB/qib: remove s_lock around header validation
        * IB/qib: Adjust to use cpumask_weight() and cpumask_first()
        * IB/qib: Add irq name refinements
        * IB/qib: Add logic for affinity hint
        * IB/qib: add optional numa affinity
        * IB/qib: Optimize locking for get_txreq()
        * IB/qib: add module paramater for sdma_idle_cnt
        * IB/qib: add cache line awareness to qib_qp and qib_devdata structures
        * IB/qib: Improve MPI message rates on NUMA platforms
        * IB/qib: Optimize driver configuration for best MPI message rates, bandwidth
        * IB/qib: Prevent driver hang with unprogrammed boards
        * IB/qib: Ensure that LOS and DFE are being turned off
        * IB/qib: Update active link width